Updated package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "harvest4clients",
+  "name": "mern barebones",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8182",
