--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "greenlock-express": "^3.1.1",
     "greenlock-store-fs": "^3.2.2",
+    "mongoose": "^5.7.13",
     "public-ip": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
